fix: icons positioning on safari
fix: icon and font size github stats

--- a/src/components/home/open-source-projects/open-source-projects.module.css
+++ b/src/components/home/open-source-projects/open-source-projects.module.css
@@ -15,6 +15,9 @@
   border-radius: 15px;
   padding: 15px;
   height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .projectCard:hover {
@@ -47,7 +50,7 @@
   width: 100%;
 }
 
-.moreProjects > * {
+.moreProjects>* {
   color: rgba(255, 255, 255, 1);
 }
 
@@ -57,12 +60,8 @@
   margin-bottom: 15px;
 }
 
-.projectStats {
-  position: absolute;
-  bottom: 10px;
-}
-
-.projectStats > * {
+.projectStats>* {
+  font-size: 0.8em;
   margin-right: 15px;
   color: rgba(255, 255, 255, 0.8);
 }
